@@ -5,6 +5,18 @@ import java.nio.file.Files
 import java.nio.file.Paths
 import java.nio.file.StandardOpenOption
 
+buildscript {
+	repositories {
+		mavenCentral()
+		maven {
+			url "https://plugins.gradle.org/m2/"
+		}
+	}
+	dependencies {
+		classpath "org.javamodularity:moduleplugin:1.4.0"
+	}
+}
+
 plugins {
 	id "com.bmuschko.docker-remote-api" version "4.0.5"
 }
@@ -14,14 +26,14 @@ description = "Mongoose is a high-load storage performance testing tool"
 ext {
 
 	depVersion = [
-		confuse            : "1.1.4",
-		confuseIoJson      : "1.0.4",
+		confuse            : "1.2.1",
+		confuseIoJson      : "1.1.0",
 		commonsCodec       : "1.11",
 		commonsLang        : "2.6",
 		disruptor          : "3.4.2",
-		fiber4j            : "1.0.7",
-		jackson            : "2.9.6",
-		javaCommons        : "2.1.14",
+		fiber4j            : "1.1.0",
+		jackson            : "2.9.8",
+		javaCommons        : "2.2.3",
 		javassist          : "3.23.1-GA",
 		jetty              : "9.4.14.v20181114",
 		junit              : "[4,)",
@@ -31,7 +43,7 @@ ext {
 		tsdbMetrics        : "0.6.0",
 		nagaina            : "3.6.11",
 		netty              : "4.1.25.Final",
-		nettyConnectionPool: "1.0.9",
+		nettyConnectionPool: "1.1.0",
 		nettyTcNative      : "2.0.12.Final",
 	]
 
@@ -43,9 +55,11 @@ ext {
 			!it.path.equals(":storage:driver")
 	}
 
-	log4j2PluginsDatPath = Paths.get(
-		"META-INF", "org", "apache", "logging", "log4j", "core", "config", "plugins", "Log4j2Plugins.dat",
-	)
+	jarFileName = rootProject.name
+	javaHome = System.properties["java.home"]
+	jreOutDir = "${rootProject.buildDir}${File.separator}jre"
+	rootPkg = "com.emc.mongoose"
+	moduleName = rootPkg
 }
 
 allprojects {
@@ -59,19 +73,26 @@ allprojects {
 	repositories {
 		jcenter()
 		mavenCentral()
+		maven {
+			url "https://oss.sonatype.org/content/repositories/comgithubakurilov-1154"
+		}
 	}
 
 	apply plugin: "java"
 	apply plugin: "maven"
 	apply plugin: "scala"
 	apply plugin: "signing"
+	apply plugin: "org.javamodularity.moduleplugin"
 
 	group = "com.github.emc-mongoose"
 	version = defineVersion()
 
+	sourceCompatibility = 11
+	targetCompatibility = 11
+
 	configurations {
 		provided
-		testCompile {
+		testImplementation {
 			extendsFrom(compileOnly, provided)
 		}
 	}
@@ -82,17 +103,8 @@ allprojects {
 		}
 	}
 
-	compileJava {
-		sourceCompatibility = JavaVersion.VERSION_1_8
-		targetCompatibility = JavaVersion.VERSION_1_8
-	}
-
-	compileTestJava {
-		sourceCompatibility = JavaVersion.VERSION_1_8
-		targetCompatibility = JavaVersion.VERSION_1_8
-	}
-
 	test {
+		useJUnitPlatform()
 		exclude "com/emc/mongoose/endurance/*"
 		exclude "com/emc/mongoose/integration/*"
 		exclude "com/emc/mongoose/perf/*"
@@ -112,7 +124,7 @@ allprojects {
 	}
 
 	task perfTest(type: Test) {
-
+		useJUnitPlatform()
 		include "com/emc/mongoose/perf/*"
 
 		jvmArgs "-XX:MaxDirectMemorySize=2g"
@@ -128,6 +140,7 @@ allprojects {
 	}
 
 	task integrationTest(type: Test) {
+		useJUnitPlatform()
 		include "com/emc/mongoose/integration/*"
 		exclude "**/RollingAppenderTest*"
 		jvmArgs "-XX:MaxDirectMemorySize=2g"
@@ -143,7 +156,7 @@ allprojects {
 	}
 
 	task systemTest(type: Test) {
-
+		useJUnitPlatform()
 		include "com/emc/mongoose/system/*"
 
 		maxHeapSize "1g"
@@ -157,6 +170,7 @@ allprojects {
 	}
 
 	task enduranceTest(type: Test) {
+		useJUnitPlatform()
 		include "com/emc/mongoose/endurance/*"
 		maxHeapSize "1g"
 		testLogging {
@@ -272,6 +286,7 @@ dependencies {
 		"com.fasterxml.jackson.core:jackson-annotations:${depVersion.jackson}",
 		"com.fasterxml.jackson.core:jackson-core:${depVersion.jackson}",
 		"com.fasterxml.jackson.core:jackson-databind:${depVersion.jackson}",
+		"com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${depVersion.jackson}",
 		"com.github.akurilov:confuse:${depVersion.confuse}",
 		"com.github.akurilov:confuse-io-json:${depVersion.confuseIoJson}",
 		"com.github.akurilov:fiber4j:${depVersion.fiber4j}",
@@ -289,10 +304,10 @@ dependencies {
 		// actually the deps below are the runtime deps
 		"org.apache.logging.log4j:log4j-jul:${depVersion.log4j}",
 		"org.apache.logging.log4j:log4j-slf4j-impl:${depVersion.log4j}",
-		"org.slf4j:slf4j-api:${depVersion.slf4j}"
+		"org.slf4j:slf4j-api:${depVersion.slf4j}",
 	)
 
-	testCompile(
+	testImplementation(
 		"com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${depVersion.jackson}",
 		"junit:junit:${depVersion.junit}",
 		"org.scala-lang:scala-compiler:${depVersion.scala}",
@@ -337,8 +352,8 @@ subprojects {
 	}
 }
 
-task wrapper(type: Wrapper) {
-	gradleVersion = "4.8"
+wrapper {
+	gradleVersion = "5.1.1"
 }
 
 static def isTestsProject(final Project p) {
@@ -351,71 +366,37 @@ static def isTestsProject(final Project p) {
 	}
 }
 
-task mergeLog4j2PluginsDat(dependsOn: compileJava) {
-	doLast {
-
-		byte[] pluginsData
-		byte[] customPluginsData
-
-		configurations.provided
-			.each {
-				if(!it.isDirectory()) {
-					zipTree(it)
-						.filter {
-							it.toString().endsWith(log4j2PluginsDatPath.toString())
-						}
-						.each {
-							pluginsData = Files.readAllBytes(Paths.get(it.toString()))
-						}
-				}
-			}
-
-		sourceSets.main.output.classesDirs
-			.any {
-				customPluginsData = Files.readAllBytes(
-					Paths.get(it.toString(), log4j2PluginsDatPath.toString(),)
-				)
-			}
-
-		sourceSets.main.output.classesDirs
-			.any {
-				Files.write(
-					Paths.get(it.toString(), log4j2PluginsDatPath.toString(),),
-					pluginsData, StandardOpenOption.TRUNCATE_EXISTING
-				)
-				Files.write(
-					Paths.get(it.toString(), log4j2PluginsDatPath.toString(),),
-					customPluginsData, StandardOpenOption.APPEND
-				)
-			}
-	}
-}
-
-task dist(type: Jar) {
-
-	dependsOn += compileJava
-	dependsOn += mergeLog4j2PluginsDat
+task mainJar(type: Jar) {
 
 	baseName = rootProject.name
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
 	manifest {
 		attributes(
-			"Implementation-Version": version,
+			"Automatic-Module-Name": rootPkg,
 			"Implementation-Title": rootProject.name,
+			"Implementation-Version": version,
 			"Main-Class": "com.emc.mongoose.Main",
 		)
 	}
 
 	from compileJava.outputs.files
 
-	from sourceSets.main.resources
+	from sourceSets.main.output.resourcesDir
 
 	from configurations.provided.collect {
 		it.isDirectory() ? it : zipTree(it)
 	}
 
-	exclude "META-INF/*.RSA", "META-INF/*.SF", "META-INF/*.DSA"
+	excludes = [
+		"**/*.html",
+		"META-INF/*.DSA",
+		"META-INF/*.LIST",
+		"META-INF/*.RSA",
+		"META-INF/*.SF",
+		"module-info.class",
+		"org/apache/commons/lang/enum/**",
+	]
 
 	leafProjects
 		.each {
@@ -440,19 +421,19 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 artifacts {
-	archives dist
+	archives mainJar
 	archives sourcesJar
 	archives javadocJar
 }
 
-assemble.dependsOn += dist
+assemble.dependsOn += mainJar
 
 // Docker tasks ////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 import com.bmuschko.gradle.docker.tasks.image.*
 import com.bmuschko.gradle.docker.tasks.container.*
 
-task buildImage(type: DockerBuildImage, dependsOn: dist) {
+task buildImage(type: DockerBuildImage, dependsOn: mainJar) {
 	inputDir = rootProject.projectDir
 	dockerFile = project.file("docker${File.separator}Dockerfile")
 	imageId = "emcmongoose/mongoose"
@@ -519,4 +500,35 @@ task robotest(type: DockerWaitContainer, dependsOn: startRobotestContainer) {
 			println "Robotests PASSED"
 		}
 	}
+}
+
+// Modules /////////////////////////////////////////////////////////////////////////////////////////////////////////////
+task moduleInfoSrc(type: Exec, dependsOn: mainJar) {
+	executable = "${javaHome}${File.separator}bin${File.separator}jdeps"
+	args = [
+		"--module-path", "${javaHome}${File.separator}jmods",
+		"--generate-module-info", rootProject.buildDir,
+		"--add-modules=ALL-MODULE-PATH",
+		mainJar.outputs.files.iterator().next().path,
+	]
+}
+
+task compileModuleInfo(type: Exec, dependsOn: moduleInfoSrc) {
+	executable = "${javaHome}${File.separator}bin${File.separator}javac"
+	args = [
+		"--patch-module",
+		"${rootPkg}=${mainJar.outputs.files.iterator().next().path}",
+		"${rootProject.buildDir}${File.separator}${rootPkg}${File.separator}module-info.java",
+		"-d", "${rootProject.buildDir}${File.separator}${rootPkg}"
+	]
+}
+
+task mainModule(type: Exec, dependsOn: compileModuleInfo) {
+	executable = "${javaHome}${File.separator}bin${File.separator}jar"
+	workingDir = "${rootProject.buildDir}${File.separator}${rootPkg}"
+	args = [
+		"-uf",
+		mainJar.outputs.files.iterator().next(),
+		"module-info.class",
+	]
 }
